Assets style: Fix alignment of footer

--- a/pillar-web/src/styles/_utils.sass
+++ b/pillar-web/src/styles/_utils.sass
@@ -1,6 +1,8 @@
 /* Collection of mixins that can be plugged everywhere */
 
 =clearfix
+	clear: both
+
 	&:after
 		// Basically same as .clearfix from bootstrap
 		clear: both
